--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.4",
